--- a/Budget Bites upload/about.html
+++ b/Budget Bites upload/about.html
@@ -1,4 +1,4 @@
-<style>
+<!--<style>
     /* Add basic styles for layout and design */
     body {
         font-family: Arial, sans-serif;
@@ -35,12 +35,39 @@
         color: #fff;
         margin-top: 20px;
     }
-</style>
+</style>--->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>About Us - Budget Bites</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="Css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <nav>
+        <a href="BB.html">Home</a>
+        <a href="wheel.html">Spin the Wheel</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+    </nav>
 
-<nav>
-    <a href="BB.html">Home</a>
-    <a href="wheel.html">Spin the Wheel</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <section class="about-us">
+        <h1>About Budget Bites</h1>
+        <p>Welcome to <strong>Budget Bites</strong> your go-to platform for discovering the best restaurants within your budget! Whether you're craving a hearty meal or a light snack, we provide you with a curated list of restaurant options that match your spending preferences.</p>
+        
+        <p>Our mission is simple: to help you explore new dining experiences while keeping your wallet in check. With our easy-to-use platform, you can filter restaurants by cuisine type and price range, ensuring that you find the perfect spot for any occasion, without breaking the bank.</p>
 
-</nav>
+        <p>How it works:</p>
+        <ul>
+            <li><strong>Enter your budget:</strong> Let us know how much you're willing to spend.</li>
+            <li><strong>Choose your cuisine:</strong> Select from a variety of cuisines to find exactly what you're in the mood for.</li>
+            <li><strong>Get the list:</strong> Our database will filter and provide you with a list of restaurants that match your criteria.</li>
+        </ul>
+
+        <p>At Budget Bites, we believe dining out should be fun and affordable. Our constantly updated database ensures that you'll always have access to the latest options in town, from budget-friendly local spots to great value international eateries.</p>
+
+        <p>Happy dining, and we hope Budget Bites becomes your trusted companion in finding delicious meals that fit your budget!</p>
+    </section>
+</body>
+</html>
